--- a/libavfilter/Makefile
+++ b/libavfilter/Makefile
@@ -253,6 +253,8 @@ OBJS-$(CONFIG_GBLUR_FILTER)                  += vf_gblur.o
 OBJS-$(CONFIG_GEQ_FILTER)                    += vf_geq.o
 OBJS-$(CONFIG_GLNONE_FILTER)                 += vf_glnone.o glutil.o
 OBJS-$(CONFIG_GLWAVE_FILTER)                 += vf_glwave.o
+OBJS-$(CONFIG_GLSOULOUT_FILTER)              += vf_glsoulout.o
+OBJS-$(CONFIG_GLSNOW_FILTER)                 += vf_glsnow.o
 OBJS-$(CONFIG_GRADFUN_FILTER)                += vf_gradfun.o
 OBJS-$(CONFIG_GRAPHMONITOR_FILTER)           += f_graphmonitor.o
 OBJS-$(CONFIG_GREYEDGE_FILTER)               += vf_colorconstancy.o
