add some gl filter

--- a/libavfilter/Makefile
+++ b/libavfilter/Makefile
@@ -255,6 +255,10 @@ OBJS-$(CONFIG_GLNONE_FILTER)                 += vf_glnone.o glutil.o
 OBJS-$(CONFIG_GLWAVE_FILTER)                 += vf_glwave.o
 OBJS-$(CONFIG_GLSOULOUT_FILTER)              += vf_glsoulout.o
 OBJS-$(CONFIG_GLSNOW_FILTER)                 += vf_glsnow.o
+OBJS-$(CONFIG_GLWATER_FILTER)                += vf_glwater.o
+OBJS-$(CONFIG_GLSTARFIELD_FILTER)            += vf_glstarfield.o
+OBJS-$(CONFIG_GLSLITSTRETCH_FILTER)          += vf_glslitstretch.o
+OBJS-$(CONFIG_GLRAINLIGHT_FILTER)            += vf_glrainlight.o
 OBJS-$(CONFIG_GRADFUN_FILTER)                += vf_gradfun.o
 OBJS-$(CONFIG_GRAPHMONITOR_FILTER)           += f_graphmonitor.o
 OBJS-$(CONFIG_GREYEDGE_FILTER)               += vf_colorconstancy.o
