1 fix gl filter cannot used in filter_complex 2 complete gltransition code

--- a/libavfilter/Makefile
+++ b/libavfilter/Makefile
@@ -259,6 +259,8 @@ OBJS-$(CONFIG_GLWATER_FILTER)                += vf_glwater.o
 OBJS-$(CONFIG_GLSTARFIELD_FILTER)            += vf_glstarfield.o
 OBJS-$(CONFIG_GLSLITSTRETCH_FILTER)          += vf_glslitstretch.o
 OBJS-$(CONFIG_GLRAINLIGHT_FILTER)            += vf_glrainlight.o
+OBJS-$(CONFIG_GLTRANSITION_FILTER)           += vf_gltransition.o
+OBJS-$(CONFIG_GLMIRROR_FILTER)               += vf_glmirror.o
 OBJS-$(CONFIG_GRADFUN_FILTER)                += vf_gradfun.o
 OBJS-$(CONFIG_GRAPHMONITOR_FILTER)           += f_graphmonitor.o
 OBJS-$(CONFIG_GREYEDGE_FILTER)               += vf_colorconstancy.o
